--- a/ruler.csproj
+++ b/ruler.csproj
@@ -7,6 +7,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <UseWPF>true</UseWPF>
     <ApplicationIcon>JudyRuler.ico</ApplicationIcon>
+    <IncludeNativeLibrariesForSelfExtract>true</IncludeNativeLibrariesForSelfExtract>
   </PropertyGroup>
 
   <ItemGroup>
@@ -14,7 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Content Include="JudyRuler.ico" />
+    <Resource Include="JudyRuler.ico" />
   </ItemGroup>
 
   <ItemGroup>
